added merch and team pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
   "cSpell.words": [
-    "Farhenheit"
+    "Aaaamaaaazing",
+    "Amanpreet",
+    "Choi",
+    "Deepak",
+    "Farhenheit",
+    "Hyeseong",
+    "Igneczi",
+    "Jiang",
+    "Kamukama",
+    "Mahmoodi",
+    "Manesha",
+    "Milu",
+    "Monpara",
+    "Persaud",
+    "Porras",
+    "Prasanth",
+    "Sharma",
+    "Shunmugam",
+    "Tirlochan",
+    "Vahid",
+    "Vishal"
   ]
 }
