added hotjar verification code to all pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,34 @@
 {
   "cSpell.words": [
     "Åland",
+    "aliquet",
+    "amet",
     "Bouvet",
     "Burkina",
     "Caicos",
+    "consectetur",
     "D'ivoire",
     "Darussalam",
+    "dignissim",
     "Faso",
+    "feugiat",
     "Futuna",
+    "hjid",
+    "hjsv",
+    "Hotjar",
+    "interdum",
     "Jamahiriya",
     "Kitts",
     "leste",
     "Marino",
     "Mayen",
+    "morbi",
+    "nunc",
+    "porta",
     "Rica",
+    "scelerisque",
     "Tokelau",
+    "tortor",
     "Vosk",
     "voskcoin"
   ]
