added nanopod site

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "Åland",
     "aliquet",
     "amet",
+    "Bitmain",
     "Bouvet",
     "Burkina",
     "Caicos",
@@ -30,7 +31,8 @@
     "Tokelau",
     "tortor",
     "Vosk",
-    "voskcoin"
+    "voskcoin",
+    "Whatsminer"
   ],
   "liveServer.settings.port": 5501
 }
