added more content from october

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
     "Bouvet",
     "Burkina",
     "Caicos",
+    "Cision",
+    "Coinscreed",
     "consectetur",
     "D'ivoire",
     "Darussalam",
@@ -24,6 +26,7 @@
     "Marino",
     "Mayen",
     "morbi",
+    "Newswire",
     "nunc",
     "porta",
     "Rica",
