Update settings.json and nanopod.html

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,8 +29,10 @@
     "Newswire",
     "nunc",
     "porta",
+    "recuded",
     "Rica",
     "scelerisque",
+    "scrollers",
     "Tokelau",
     "tortor",
     "Vosk",
